# pincer

./: .env.example  .gitignore  Dockerfile  README.md  coverage.xml  docker-compose.signal.yml  docker-compose.yml  main.py  pyproject.toml  render.yaml
.cursor/plans/: image_gen_tool_nano_banana_5ff8d012.plan.md
.github/workflows/: ci.yml
dashboard/: Dockerfile  components.json  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: client.ts  types.ts
dashboard/src/components/: ErrorBoundary.tsx
dashboard/src/lib/: constants.ts  formatters.ts
dashboard/src/pages/: Audit.tsx  Conversations.tsx  Costs.tsx  Dashboard.tsx  Doctor.tsx  Login.tsx  Settings.tsx  Skills.tsx
dashboard/src/stores/: auth.ts  preferences.ts
data/: audit.db-shm  audit.db-wal
data/migrations/: 004_sprint4.sql  005_sprint7_voice.sql
docs/: API reference.md  Architecture.md  Bug report.md  CLI_REFERENCE.md  Changelog.md  Code of conduct.md  Community.md  Configuration.md  Contributing.md  DEVELOPMENT.md  Deployment.md  Feature request.md  Governance.md  Migration from openclaw.md  PROJECT_STRUCTURE.md  Pull request template.md  Quickstart.md  Security Policy.md  Security.md  Skills guide.md  Voice calling.md  Voice-calling-setup.md  signal-setup.md
pincer/: .env.example  .gitignore  Dockerfile  README.md  costs.json  docker-compose.yml  pyproject.toml  railway.toml
pincer/.do/: deploy.template.yaml
pincer/.github/workflows/: ci.yml
pincer/data/migrations/: 003_sprint3.sql
pincer/docs/: PROJECT_STRUCTURE.md  cli.md  configuration.md  getting-started.md  index.md  overview.md
pincer/docs/architecture/: data-flow.md  project-structure.md  system-architecture.md
pincer/docs/modules/: agent-core.md  builtin-tools.md  channels.md  cost-tracking.md  llm-providers.md  memory-system.md  security.md  session-management.md  summarizer.md  telegram-channel.md  tool-registry.md
pincer/docs/reference/: cli.md  environment-variables.md  exceptions.md
pincer/skills/expense_tracker/: manifest.json  skill.py
pincer/skills/git_status/: manifest.json
pincer/skills/habit_tracker/: skill.py
pincer/skills/news/: manifest.json  skill.py
pincer/skills/pomodoro/: manifest.json  skill.py
pincer/skills/stock_price/: manifest.json
pincer/skills/translate/: manifest.json
pincer/skills/weather/: manifest.json  skill.py
pincer/skills/youtube_summary/: skill.py
pincer/src/pincer/: __init__.py  __main__.py  cli.py  config.py  exceptions.py
pincer/src/pincer/api/: __init__.py  server.py
pincer/src/pincer/channels/: __init__.py  base.py  discord_channel.py  google_meet.py  phone_calls.py  telegram.py  web.py  wechat.py  whatsapp.py
pincer/src/pincer/core/: agent.py  identity.py  session.py
pincer/src/pincer/costs/: __init__.py  budget.py
pincer/src/pincer/llm/: anthropic_provider.py  base.py  cost_tracker.py  google_gemini_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py
pincer/src/pincer/memory/: __init__.py  store.py  summarizer.py
pincer/src/pincer/scheduler/: __init__.py  cron.py  triggers.py
pincer/src/pincer/security/: __init__.py  audit.py  doctor.py  firewall.py  rate_limiter.py
pincer/src/pincer/tools/: approval.py  registry.py  sandbox.py
pincer/src/pincer/tools/builtin/: browser.py  calendar_tool.py  email_tool.py  files.py  python_exec.py  shell.py  web_search.py
pincer/src/pincer/tools/skills/: loader.py  scanner.py
pincer/tests/: conftest.py  test_api.py  test_budget.py  test_cli.py  test_cli.sh  test_config.py  test_email_tool.py  test_identity.py  test_init.py  test_integration.py  test_llm.py  test_proactive.py  test_rate_limiter.py  test_sandbox.py  test_skill_loader.py  test_skill_scanner.py  test_skills.py  test_tools.py  test_whatsapp.py  test_whatsapp_routing.py
skills/git_status/: skill.py
skills/habit_tracker/: manifest.json  skill.py
skills/news/: skill.py
skills/phone_contacts/: manifest.json  skill.py
skills/pomodoro/: skill.py
skills/stock_price/: skill.py
skills/summarize_url/: manifest.json  skill.py
skills/translate/: skill.py
skills/weather/: skill.py
skills/youtube_summary/: manifest.json  skill.py
src/pincer/: __init__.py  cli.py  config.py  exceptions.py
src/pincer/api/: audit.py  conversations.py  (+3 more)
tests/: conftest.py  test_agent.py  test_api.py  test_audit.py  test_budget.py  test_calendar_tool.py  test_config.py  test_cost_tracker_image.py  test_discord.py  test_doctor.py  test_email_tool.py  test_identity.py  test_image_gen_tool.py  test_image_router.py  test_integration.py  test_proactive.py  test_provider_fal.py  test_provider_gemini.py  test_sandbox.py  test_scheduler.py  test_signal_channel.py  test_signal_client.py  test_signal_integration.py  test_skill_loader.py  test_skill_scanner.py  test_skills.py  test_telegram.py  test_voice_audio.py  test_voice_channel.py  test_voice_compliance.py  test_voice_e2e.py  test_voice_engine.py  test_voice_pii.py  test_voice_safety.py  test_voice_state_machine.py  test_voice_twilio.py  test_whatsapp.py  test_whatsapp_routing.py
(+112 files in other folders)
