[project]
name = "pincer-agent"
version = "0.1.0"
description = "Your personal AI agent. Text it on WhatsApp. It does stuff. 🦀"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["ai", "agent", "whatsapp", "telegram", "llm", "assistant", "pincer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.49.0",
    "openai>=1.60.0",
    "httpx>=0.27.0",
    "aiogram>=3.25.0",
    "aiosqlite>=0.22.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "typer[all]>=0.12.0",
    "rich>=13.9.0",
    "structlog>=24.4.0",
    # Sprint 3: WhatsApp + Proactive Agent
    "neonize>=0.3.14",
    # Sprint 4: Discord (PyNaCl required for voice)
    "discord.py[voice]>=2.3,<3.0",
    "qrcode[pil]>=8.0",
    "croniter>=5.0",
    "aiosmtplib>=5.1",
    "aioimaplib>=2.0",
    "google-api-python-client>=2.160",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
    "aiogoogle>=5.13",
    # Sprint 5: API Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
search = ["duckduckgo-search>=7.0.0"]
tavily = ["tavily-python>=0.5.0"]
browser = ["playwright>=1.40.0"]
memory = ["sqlite-vec>=0.1.0"]
pdf = ["pymupdf>=1.24.0"]
pdfgen = ["fpdf2>=2.7.0"]
skills = ["youtube-transcript-api", "feedparser"]
all = ["pincer-agent[search,tavily,browser,memory,pdf,pdfgen,skills]"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.27.0",
]

[project.scripts]
pincer = "pincer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pincer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
extend-ignore = ["N814", "N818"]

[tool.mypy]
python_version = "3.12"
strict = true
