[project]
name = "pincer-agent"
version = "0.1.0"
description = "Your personal AI agent. Text it on WhatsApp. It does stuff. 🦀"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["ai", "agent", "whatsapp", "telegram", "llm", "assistant", "pincer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.49.0",
    "openai>=1.60.0",
    "httpx>=0.27.0",
    "aiogram>=3.25.0",
    "aiosqlite>=0.22.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "typer[all]>=0.12.0",
    "rich>=13.9.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
search = ["duckduckgo-search>=7.0.0"]
tavily = ["tavily-python>=0.5.0"]
browser = ["playwright>=1.40.0"]
memory = ["sqlite-vec>=0.1.0"]
pdf = ["pymupdf>=1.24.0"]
pdfgen = ["fpdf2>=2.7.0"]
all = ["pincer-agent[search,tavily,browser,memory,pdf,pdfgen]"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
pincer = "pincer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pincer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
